--- a/src/main/res/layout/activity_status.xml
+++ b/src/main/res/layout/activity_status.xml
@@ -4,8 +4,4 @@
     android:id="@+id/prefs_content"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".PrefsActivity" />
+    tools:context=".StatusActivity" />
