--- a/src/main/res/layout/activity_detail.xml
+++ b/src/main/res/layout/activity_detail.xml
@@ -2,7 +2,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_detail"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingLeft="16dp"
@@ -21,9 +20,10 @@
 
     <TextView
         android:id="@+id/tvItemName"
-        android:layout_width="350dp"
-        android:layout_height="35dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
+        android:layout_marginStart="10dp"
         android:layout_toEndOf="@id/itemImage"
         android:text="Item Name"
         android:textSize="24sp"
@@ -33,7 +33,7 @@
         android:id="@+id/tvDescription"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/itemImage"
+        android:layout_below="@id/tvItemName"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_marginTop="10dp"
