list is working

--- a/src/main/res/xml/backup_descriptor.xml
+++ b/src/main/res/xml/backup_descriptor.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <full-backup-content>
     <!-- TODO Remove the following "exclude" elements to make them a part of the auto backup -->
-    <exclude
-        domain="database"
-        path="ToDo.db" />
-    <!-- Exclude the shared preferences file that contains the GCM registrationId -->
-    <exclude
-        domain="sharedpref"
-        path="my_global_prefs.xml" />
+<!--    <exclude-->
+<!--        domain="database"-->
+<!--        path="ToDo.db" />-->
+<!--    &lt;!&ndash; Exclude the shared preferences file that contains the GCM registrationId &ndash;&gt;-->
+<!--    <exclude-->
+<!--        domain="sharedpref"-->
+<!--        path="my_global_prefs.xml" />-->
 </full-backup-content>
