--- a/src/main/res/layout/activity_detail.xml
+++ b/src/main/res/layout/activity_detail.xml
@@ -1,178 +1,188 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:isScrollContainer="true"
-    android:paddingLeft="16dp"
-    android:paddingTop="16dp"
-    android:paddingRight="16dp"
-    android:paddingBottom="16dp"
-    tools:context="com.example.td2.DetailActivity">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <ImageView
-        android:id="@+id/itemImage"
-        android:layout_width="35dp"
-        android:layout_height="35dp"
-        android:contentDescription="@string/category_image"
-        android:scaleType="fitCenter"
-        app:srcCompat="@drawable/world" />
-
-    <TextView
-        android:id="@+id/tvItemName"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_toEndOf="@id/itemImage"
-        android:text="Item Name"
-        android:textSize="24sp"
-        tools:ignore="HardcodedText" />
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/tvDescription"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/tvItemName"
-        android:layout_marginTop="10dp"
-        android:text="Longer description"
-        tools:ignore="HardcodedText" />
+        <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:isScrollContainer="true"
+            android:paddingLeft="16dp"
+            android:paddingTop="16dp"
+            android:paddingRight="16dp"
+            android:paddingBottom="16dp"
+            tools:context="com.example.td2.DetailActivity">
 
-    <TextView
-        android:id="@+id/tvDuration"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/tvLocation"
-        android:text="00:30"
-        android:textSize="24sp"
-        tools:ignore="HardcodedText" />
+            <ImageView
+                android:id="@+id/itemImage"
+                app:srcCompat="@drawable/world"
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                android:contentDescription="@string/category_image"
+                android:scaleType="fitCenter" />
 
-    <TextView
-        android:id="@+id/tvRecycle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/tvLocation"
-        android:layout_marginStart="10dp"
-        android:layout_toEndOf="@id/tvDuration"
-        android:text="Recycle code"
-        android:textSize="24sp"
-        tools:ignore="HardcodedText" />
+            <TextView
+                android:id="@+id/tvItemName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_toEndOf="@id/itemImage"
+                android:text="Item Name"
+                android:textSize="24sp"
+                tools:ignore="HardcodedText" />
 
-    <TextView
-        android:id="@+id/tvSubjective"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/tvDuration"
-        android:layout_marginStart="10dp"
-        android:text="SP"
-        android:textSize="24sp"
-        tools:ignore="HardcodedText" />
+            <TextView
+                android:id="@+id/tvDescription"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/tvItemName"
+                android:layout_marginTop="10dp"
+                android:text="Longer description"
+                tools:ignore="HardcodedText" />
 
-    <TextView
-        android:id="@+id/tvConsequences"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/tvDuration"
-        android:layout_marginStart="10dp"
-        android:layout_toEndOf="@id/tvSubjective"
-        android:text="CON"
-        android:textSize="24sp"
-        tools:ignore="HardcodedText" />
+            <TextView
+                android:id="@+id/tvDuration"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/tvLocation"
+                android:text="00:30"
+                android:textSize="24sp"
+                tools:ignore="HardcodedText" />
 
-    <TextView
-        android:id="@+id/tvBenefit"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/tvDuration"
-        android:layout_marginStart="10dp"
-        android:layout_toEndOf="@id/tvConsequences"
-        android:text="BEN"
-        android:textSize="24sp"
-        tools:ignore="HardcodedText" />
+            <TextView
+                android:id="@+id/tvRecycle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/tvLocation"
+                android:layout_marginStart="10dp"
+                android:layout_toEndOf="@id/tvDuration"
+                android:text="Recycle code"
+                android:textSize="24sp"
+                tools:ignore="HardcodedText" />
 
-    <TextView
-        android:id="@+id/tvAfter"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/tvSubjective"
-        android:text="Restrict to after"
-        android:textSize="24sp"
-        tools:ignore="HardcodedText" />
+            <TextView
+                android:id="@+id/tvSubjective"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/tvDuration"
+                android:layout_marginStart="10dp"
+                android:text="SP"
+                android:textSize="24sp"
+                tools:ignore="HardcodedText" />
 
-    <TextView
-        android:id="@+id/tvDeadline"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/tvAfter"
-        android:text="Restrict to before"
-        android:textSize="24sp"
-        tools:ignore="HardcodedText" />
+            <TextView
+                android:id="@+id/tvConsequences"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/tvDuration"
+                android:layout_marginStart="10dp"
+                android:layout_toEndOf="@id/tvSubjective"
+                android:text="CON"
+                android:textSize="24sp"
+                tools:ignore="HardcodedText" />
 
-    <TextView
-        android:id="@+id/tvLocation"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/tvDescription"
-        android:layout_marginStart="10dp"
-        android:text="Restrict to location"
-        android:textSize="24sp"
-        tools:ignore="HardcodedText" />
+            <TextView
+                android:id="@+id/tvBenefit"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/tvDuration"
+                android:layout_marginStart="10dp"
+                android:layout_toEndOf="@id/tvConsequences"
+                android:text="BEN"
+                android:textSize="24sp"
+                tools:ignore="HardcodedText" />
 
-    <TextView
-        android:id="@+id/tvDaysICanDoIt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/tvDeadline"
-        android:text="Restrict to days"
-        android:textSize="24sp"
-        tools:ignore="HardcodedText" />
+            <TextView
+                android:id="@+id/tvAfter"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/tvSubjective"
+                android:text="Restrict to after"
+                android:textSize="24sp"
+                tools:ignore="HardcodedText" />
 
-    <TextView
-        android:id="@+id/tvEarliest"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/tvDaysICanDoIt"
-        android:text="Restrict to times later than"
-        android:textSize="24sp"
-        tools:ignore="HardcodedText" />
+            <TextView
+                android:id="@+id/tvDeadline"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/tvAfter"
+                android:text="Restrict to before"
+                android:textSize="24sp"
+                tools:ignore="HardcodedText" />
 
-    <TextView
-        android:id="@+id/tvLatest"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/tvEarliest"
-        android:text="Restrict to times earlier than"
-        android:textSize="24sp"
-        tools:ignore="HardcodedText" />
+            <TextView
+                android:id="@+id/tvLocation"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/tvDescription"
+                android:layout_marginStart="10dp"
+                android:text="Restrict to location"
+                android:textSize="24sp"
+                tools:ignore="HardcodedText" />
 
-    <TextView
-        android:id="@+id/tvWeather"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/tvLatest"
-        android:text="Restrict to weather"
-        android:textSize="24sp"
-        tools:ignore="HardcodedText" />
+            <TextView
+                android:id="@+id/tvDaysICanDoIt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/tvDeadline"
+                android:text="Restrict to days"
+                android:textSize="24sp"
+                tools:ignore="HardcodedText" />
+
+            <TextView
+                android:id="@+id/tvEarliest"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/tvDaysICanDoIt"
+                android:text="Restrict to times later than"
+                android:textSize="24sp"
+                tools:ignore="HardcodedText" />
+
+            <TextView
+                android:id="@+id/tvLatest"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/tvEarliest"
+                android:text="Restrict to times earlier than"
+                android:textSize="24sp"
+                tools:ignore="HardcodedText" />
+
+            <TextView
+                android:id="@+id/tvWeather"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/tvLatest"
+                android:text="Restrict to weather"
+                android:textSize="24sp"
+                tools:ignore="HardcodedText" />
 
 
-    <TextView
-        android:id="@+id/tvPeople"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/tvWeather"
-        android:layout_alignParentStart="true"
-        android:text="property not in use"
-        android:textSize="24sp"
-        tools:ignore="HardcodedText" />
+            <TextView
+                android:id="@+id/tvPeople"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/tvWeather"
+                android:layout_alignParentStart="true"
+                android:text="property not in use"
+                android:textSize="24sp"
+                tools:ignore="HardcodedText" />
 
-    <TextView
-        android:id="@+id/tvWorkLoadAnalysis"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/tvPeople"
-        android:layout_alignParentStart="true"
-        android:text="Workload analysis"
-        android:textSize="24sp"
-        tools:ignore="HardcodedText" />
+            <TextView
+                android:id="@+id/tvWorkLoadAnalysis"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/tvPeople"
+                android:layout_alignParentStart="true"
+                android:text="Workload analysis"
+                android:textSize="24sp"
+                tools:ignore="HardcodedText" />
 
-</RelativeLayout>
+        </RelativeLayout>
+    </LinearLayout>
+</ScrollView>
