--- a/src/main/res/menu/main_menu.xml
+++ b/src/main/res/menu/main_menu.xml
@@ -1,21 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-            android:id="@+id/action_signin"
-            android:title="@string/sign_in"
-            app:showAsAction="ifRoom" />
+        android:id="@+id/action_signin"
+        android:title="@string/sign_in"
+        app:showAsAction="ifRoom" />
     <item
-            android:id="@+id/action_settings"
-            android:title="@string/settings"
-            app:showAsAction="ifRoom" />
+        android:id="@+id/action_settings"
+        android:title="@string/settings"
+        app:showAsAction="ifRoom" />
     <item
-            android:id="@+id/action_import"
-            android:title="@string/Import"
-            app:showAsAction="ifRoom" />
+        android:id="@+id/action_import_TDF"
+        android:title="@string/Import_TDF"
+        app:showAsAction="ifRoom" />
     <item
-            android:id="@+id/action_export"
-            android:title="@string/Export"
-            app:showAsAction="ifRoom" />
+        android:id="@+id/action_import_JSON"
+        android:title="@string/Import_TDF"
+        app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/action_export"
+        android:title="@string/Export_JSON"
+        app:showAsAction="ifRoom" />
 </menu>
